# fraud-detector-3000

./: .gitignore  .pre-commit-config.yaml  .yo-rc.json  Dockerfile  Makefile  README.md  TODO.txt  dvc.yaml  params.yaml  pyproject.toml  terraform.tfstate
.dvc/: config
.github/workflows/actions/install_dependencies/: action.yml
docs/: README_intro.md  README_structure.md
mlartifacts/0/454a9bf11e2d471085a66840f7217f35/artifacts/model/: MLmodel  model.pkl
mlartifacts/0/73eb97b507564f1fbac8e29dc37abf24/artifacts/model/: MLmodel  conda.yaml  requirements.txt
mlartifacts/0/a85a10e7bfc54c39b79c9e28b577fac6/artifacts/: evaluation.json
mlartifacts/0/d77802b388ea4fe2bffa75fa1d67e640/artifacts/model/: MLmodel  python_env.yaml
mlartifacts/0/e0e68a7c7fc248c1ad66e55e2ad5f56e/artifacts/model/: MLmodel  conda.yaml  model.pkl  requirements.txt
mlruns/0/: meta.yaml
mlruns/0/37cf722cf3fa454293784fb7ad3aaf06/: meta.yaml
mlruns/0/37cf722cf3fa454293784fb7ad3aaf06/metrics/: accuracy  f1_score  precision  recall  roc_auc
mlruns/0/37cf722cf3fa454293784fb7ad3aaf06/tags/: mlflow.runName  mlflow.source.name
mlruns/0/454a9bf11e2d471085a66840f7217f35/: meta.yaml
mlruns/0/454a9bf11e2d471085a66840f7217f35/tags/: mlflow.log-model.history  mlflow.runName
mlruns/0/65b4d88fe23d4ef38956866ba57269fe/: meta.yaml
mlruns/0/65b4d88fe23d4ef38956866ba57269fe/metrics/: accuracy  f1_score  precision  recall  roc_auc
mlruns/0/65b4d88fe23d4ef38956866ba57269fe/tags/: mlflow.runName
mlruns/0/73eb97b507564f1fbac8e29dc37abf24/: meta.yaml
mlruns/0/73eb97b507564f1fbac8e29dc37abf24/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.name
mlruns/0/a85a10e7bfc54c39b79c9e28b577fac6/: meta.yaml
mlruns/0/a85a10e7bfc54c39b79c9e28b577fac6/metrics/: accuracy  f1_score  precision  recall  roc_auc
mlruns/0/a85a10e7bfc54c39b79c9e28b577fac6/tags/: mlflow.runName
mlruns/0/d77802b388ea4fe2bffa75fa1d67e640/: meta.yaml
mlruns/0/d77802b388ea4fe2bffa75fa1d67e640/tags/: mlflow.log-model.history  mlflow.runName
mlruns/0/d7f8258f12a04cf9a1b9d83c09d797aa/: meta.yaml
mlruns/0/d7f8258f12a04cf9a1b9d83c09d797aa/metrics/: accuracy  f1_score  precision  recall  roc_auc
mlruns/0/d7f8258f12a04cf9a1b9d83c09d797aa/tags/: mlflow.runName
mlruns/0/e0e68a7c7fc248c1ad66e55e2ad5f56e/: meta.yaml
mlruns/0/e0e68a7c7fc248c1ad66e55e2ad5f56e/tags/: mlflow.log-model.history  mlflow.runName  mlflow.source.git.commit
mlruns/models/fraud-detector/: meta.yaml
mlruns/models/fraud-detector/version-1/: meta.yaml
mlruns/models/fraud-detector/version-2/: meta.yaml
mlruns/models/prod/: meta.yaml
postman/: API.postman_collection.json
src/api/: main.py  types.py
src/fraud_detector/: constants.py  evaluate.py  prepare.py  train.py  types.py
src/models/: model.pkl
src/notebooks/: first_test.py
src/scripts/: __init__.py  evaluate_model.py  prepare_model.py  promote_model.py  train_model.py
terraform/: .terraform.lock.hcl  README.md  application_load_balancer.tf  autoscaled_instance.tf  backend.tf  elastic_cloud_registry.tf  elastic_cloud_service.tf  variables.tf
tests/: __init__.py
tests/api/: test_main.py
